--- a/yasb/styles.css
+++ b/yasb/styles.css
@@ -255,5 +255,5 @@
     margin: 0;
 }
 .cava-widget .widget-container {
-    background-color: var(--base2);
+    background-color: var(--surface2);
 }
